third_party/WebKit/Source/platform/fonts/FontCustomPlatformData.cpp
@@ -147,6 +147,10 @@ FontPlatformData FontCustomPlatformData::GetFontPlatformData(
                           italic && !base_typeface_->isItalic(), orientation);
 }
 
+sk_sp<SkTypeface> FontCustomPlatformData::Typeface() {
+  return base_typeface_;
+}
+
 scoped_refptr<FontCustomPlatformData> FontCustomPlatformData::Create(
     SharedBuffer* buffer,
     String& ots_parse_message) {
